--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -1,11 +1,13 @@
 buildscript {
 	repositories {
 		mavenCentral()
+//		mavenLocal()
 		//Needed only for SNAPSHOT versions
 		//maven { url 'https://oss.sonatype.org/content/repositories/snapshots/' }
 	}
 	dependencies {
 		classpath 'info.solidsoft.gradle.pitest:gradle-pitest-plugin:1.5.2'
+		classpath "org.openapitools:openapi-generator-gradle-plugin:6.6.0"
 	}
 }
 
@@ -24,6 +26,9 @@ plugins {
 
 	// PITest
 	id 'info.solidsoft.pitest' version '1.5.2'
+
+	// OpenAPI
+	id 'org.openapi.generator' version '4.0.1'
 }
 
 group = 'nl.tudelft.cse.sem.template'
@@ -43,11 +48,7 @@ dependencies {
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 
 	implementation 'org.springframework.boot:spring-boot-starter'
-	implementation 'org.springframework.boot:spring-boot-starter-security'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
-	// https://mvnrepository.com/artifact/io.jsonwebtoken/jjwt
-	implementation 'io.jsonwebtoken:jjwt:0.9.1'
-
 
 	// Local test database (in-memory)
 	implementation 'com.h2database:h2'
@@ -59,6 +60,12 @@ dependencies {
 	testImplementation('org.junit.jupiter:junit-jupiter:5.8.2')
 	testImplementation group: 'org.mockito', name: 'mockito-core', version: '3.12.4'
 	testImplementation('org.assertj:assertj-core:3.23.1')
+
+	// Annotation
+	implementation 'io.springfox:springfox-swagger2:2.8.0'
+	implementation 'io.springfox:springfox-swagger-ui:2.8.0'
+	implementation 'org.openapitools:jackson-databind-nullable:0.1.0'
+	implementation 'io.swagger.core.v3:swagger-core:2.2.15'
 }
 
 test {
@@ -74,10 +81,6 @@ repositories {
 	mavenCentral()
 }
 
-jacoco {
-	toolVersion = "0.8.7" // Use the desired version of JaCoCo
-}
-
 jacocoTestCoverageVerification() {
 	dependsOn test
 	violationRules {
@@ -89,23 +92,40 @@ jacocoTestCoverageVerification() {
 			limit {
 				counter = 'BRANCH'
 				value = 'COVEREDRATIO'
-				minimum = 0.0
+				minimum = 0.1
 			}
 		}
 	}
 }
 
+// Define a task to run Checkstyle
+task customCheckstyle(type: Checkstyle) {
+	// Set the Checkstyle configuration file
+	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml") // Modify the path as needed
+
+	// Apply Checkstyle to the main source set while excluding generated code
+	source = sourceSets.main.allJava.filter { file ->
+		// Exclude directories or files associated with generated code
+		!file.path.contains('generated') // Example condition, modify as per your generated code path
+	}
+}
+
 checkstyle {
 	toolVersion "8.37"
-	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml")
-	ignoreFailures = false
-	maxErrors = 0
-	maxWarnings = 0
+	// Link Checkstyle task to customCheckstyle
+	configFile = customCheckstyle.configFile
+	ignoreFailures = false // Set to true if you want the build to ignore Checkstyle failures
+	showViolations = true // Set to true to display Checkstyle violations in the console
 }
 
 pmd {
 	incrementalAnalysis = true
+	ignoreFailures = true
 	sourceSets = [sourceSets.main]
+	// Exclude specific rules or files/directories
+	pmdMain {
+		excludes = ['**/generated/.*']
+	}
 }
 
 apply plugin: 'info.solidsoft.pitest'
@@ -118,4 +138,31 @@ pitest {
 	threads = 4
 	outputFormats = ['XML', 'HTML']
 	timestampedReports = false
+}
+
+apply plugin: 'org.openapi.generator'
+openApiGenerate {
+	generatorName.set("spring")
+	inputSpec.set("$rootDir/order-microservice/src/main/resources/order-api.yaml")
+	outputDir.set("$buildDir/generated")
+	apiPackage.set("nl.tudelft.sem.template.api")
+	modelPackage.set("nl.tudelft.sem.template.model")
+	configOptions.set([
+			dateLibrary: "java15"
+	])
+
+	// Exclude controller generation
+	configOptions = [
+			interfaceOnly: 'true'
+	]
+}
+
+compileJava.dependsOn tasks.named("openApiGenerate")
+
+sourceSets {
+	getByName("main") {
+		java {
+			srcDir("$buildDir/generated/src/main/java")
+		}
+	}
 }
