--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,6 +1,6 @@
 include:
   - authentication-microservice/.gitlab-ci.yml
-  - example-microservice/.gitlab-ci.yml
+  - order-microservice/.gitlab-ci.yml
 
 gradle_build:
   extends: .build_cached
