Feat: setup mutation testing and get 100% score for the dish and order repository

--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -135,7 +135,8 @@ pitest {
 	//adds dependency to org.pitest:pitest-junit5-plugin and sets "testPlugin" to "junit5"
 	junit5PluginVersion = '0.12'
 
-	targetClasses = ['nl.tudelft.sem.template.*']  //by default "${project.group}.*"
+	targetClasses = ['nl.tudelft.sem.template.order.controllers.*','nl.tudelft.sem.template.order.domain.*']  //by default "${project.group}.*"
+	excludedTestClasses =['nl.tudelft.sem.template.order.integration.*']
 	pitestVersion = '1.5.1' //not needed when a default PIT version should be used
 	threads = 4
 	outputFormats = ['XML', 'HTML']
