--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -63,7 +63,7 @@ test-order-microservice:
     - gradle_build
   stage: test
   script:
-    - gradle order-microservice:test order-microservice:jacocoTestReport --scan
+    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
     - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
   coverage: /([0-9]{1,3})%/
 
