set jacoco version

--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -68,6 +68,10 @@ dependencies {
 	implementation 'io.swagger.core.v3:swagger-core:2.2.15'
 }
 
+jacoco {
+	toolVersion = "0.8.6"
+}
+
 test {
 	useJUnitPlatform()
 	jacoco {
