--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -82,6 +82,14 @@ test-order-microservice:
   coverage: /([0-9]{1,3})%/
 
 mutation-score-check:
+  extends:
+    - .build_cached
+  needs:
+    - gradle_build
+    - pitest-order-microservice
+  dependencies:
+    - gradle_build
+    - pitest-order-microservice
   stage: test
   script:
     - |
