--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -90,6 +90,7 @@ mutation-score-check:
     - pitest-order-microservice
   stage: test
   script:
+    - ls -R build/reports/pitest
     - |
       MUTATION_SCORE=$(grep -oP "(?<=<th>Mutation Score</th><td>)([0-9]+)" order-microservice/build/reports/pitest/index.html)
       if [[ $MUTATION_SCORE -ge 70 ]]; then
