--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -66,20 +66,20 @@ pitest-order-microservice:
     gradle order-microservice:pitest
   allow_failure: true
 
-test-order-microservice:
-  extends:
-    - .build_cached
-  needs:
-    - gradle_build
-    - pitest-order-microservice
-  dependencies:
-    - gradle_build
-    - pitest-order-microservice
-  stage: test
-  script:
-    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
-    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
-  coverage: /([0-9]{1,3})%/
+#test-order-microservice:
+#  extends:
+#    - .build_cached
+#  needs:
+#    - gradle_build
+#    - pitest-order-microservice
+#  dependencies:
+#    - gradle_build
+#    - pitest-order-microservice
+#  stage: test
+#  script:
+#    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
+#    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
+#  coverage: /([0-9]{1,3})%/
 
 mutation-score-check:
   extends:
