--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -64,6 +64,14 @@ pitest-order-microservice:
   stage: test
   script:
     gradle order-microservice:pitest
+    - |
+    MUTATION_SCORE=$(grep -oP "(?<=<th>Mutation Score</th><td>)([0-9]+)" order-microservice/build/reports/pitest/index.html)
+    if [[ $MUTATION_SCORE -ge 70 ]]; then
+    echo "Mutation score is greater than or equal to 70%."
+    else
+    echo "Mutation score is less than 70%."
+    exit 1
+    fi
   allow_failure: true
 
 #test-order-microservice:
@@ -81,21 +89,13 @@ pitest-order-microservice:
 #    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
 #  coverage: /([0-9]{1,3})%/
 
-mutation-score-check:
-  extends:
-    - .build_cached
-  needs:
-    - pitest-order-microservice
-  dependencies:
-    - pitest-order-microservice
-  stage: test
-  script:
-    - ls order-microservice/build.gradle
-    - |
-      MUTATION_SCORE=$(grep -oP "(?<=<th>Mutation Score</th><td>)([0-9]+)" order-microservice/build/reports/pitest/index.html)
-      if [[ $MUTATION_SCORE -ge 70 ]]; then
-        echo "Mutation score is greater than or equal to 70%."
-      else
-        echo "Mutation score is less than 70%."
-        exit 1
-      fi
+#mutation-score-check:
+#  extends:
+#    - .build_cached
+#  needs:
+#    - pitest-order-microservice
+#  dependencies:
+#    - pitest-order-microservice
+#  stage: test
+#  script:
+#    - ls order-microservice/build
