--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -63,33 +63,23 @@ pitest-order-microservice:
     - gradle_build
   stage: test
   script:
-    - |
-      echo "hello" &&
-      gradle order-microservice:pitest &&
-      echo "hello2" &&
-      MUTATION_SCORE=$(grep -oP "(?<=<th>Mutation Score</th><td>)([0-9]+)" order-microservice/build/reports/pitest/index.html) &&
-      if [[ $MUTATION_SCORE -ge 70 ]]; then
-        echo "Mutation score is greater than or equal to 70%."
-      else
-        echo "Mutation score is less than 70%."
-        exit 1
-      fi
-  allow_failure: true
+    gradle order-microservice:pitest
+  allow_failure: false
 
-#test-order-microservice:
-#  extends:
-#    - .build_cached
-#  needs:
-#    - gradle_build
-#    - pitest-order-microservice
-#  dependencies:
-#    - gradle_build
-#    - pitest-order-microservice
-#  stage: test
-#  script:
-#    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
-#    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
-#  coverage: /([0-9]{1,3})%/
+test-order-microservice:
+  extends:
+    - .build_cached
+  needs:
+    - gradle_build
+    - pitest-order-microservice
+  dependencies:
+    - gradle_build
+    - pitest-order-microservice
+  stage: test
+  script:
+    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
+    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
+  coverage: /([0-9]{1,3})%/
 
 #mutation-score-check:
 #  extends:
