--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -77,9 +77,7 @@ test-order-microservice:
     - pitest-order-microservice
   stage: test
   script:
-    - gradle order-microservice:test order-microservice:jacocoTestReport --stacktrace
-    - cat order-microservice/build/reports/jacoco/test/html/index.html | grep -Po "Total.*?([0-9]{1,3})%"
-  coverage: /([0-9]{1,3})%/
+    - gradle order-microservice:test order-microservice:jacocoTestReport
 
 #mutation-score-check:
 #  extends:
