add method getAllRestaurants

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'template'
 
-include 'authentication-microservice'
+//include 'authentication-microservice'
 include 'order-microservice'
