remove authentication in CI pipeline and gradle build settings

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 include:
-  - authentication-microservice/.gitlab-ci.yml
+#  - authentication-microservice/.gitlab-ci.yml
   - order-microservice/.gitlab-ci.yml
 
 gradle_build:
