fix: only run checkstyle and pmd on important files

--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -101,36 +101,57 @@ jacocoTestCoverageVerification() {
 	}
 }
 
-// Define a task to run Checkstyle
-task customCheckstyle(type: Checkstyle) {
-	// Set the Checkstyle configuration file
-	configFile = file("${rootDir}/config/checkstyle/checkstyle.xml") // Modify the path as needed
-
-	// Apply Checkstyle to the main source set while excluding generated code
-	source = sourceSets.main.allJava.filter { file ->
-		// Exclude directories or files associated with generated code
-		!file.path.contains('generated') // Example condition, modify as per your generated code path
-	}
-	// Set Checkstyle classpath
-	classpath = configurations.checkstyle // Use the 'checkstyle' configuration
-
+checkstyle {
+	toolVersion "8.37"
 	// Link Checkstyle task to customCheckstyle
-	checkstyle {
-		toolVersion "10.12.5"
-		// configFile has already been set in customCheckstyle task
-		ignoreFailures = false // Set to true if you want the build to ignore Checkstyle failures
-		showViolations = true // Set to true to display Checkstyle violations in the console
+	configFile = file("${projectDir}/../config/checkstyle/checkstyle.xml")
+	ignoreFailures = false // Set to true if you want the build to ignore Checkstyle failures
+	showViolations = true // Set to true to display Checkstyle violations in the console
+
+	checkstyleMain {
+		source = project.sourceSets.main.allJava.filter { file ->
+			// Exclude directories or files associated with generated code
+			!file.path.contains('generated') // Example condition, modify as per your generated code path
+					&&!file.path.contains('commons')
+					&&!file.path.contains('api')
+		}
+		excludes = ['**/generated/.*']
+	}
+
+	checkstyleTest {
+		source = project.sourceSets.test.allJava.filter { file ->
+			// Exclude directories or files associated with generated code
+			!file.path.contains('generated') // Example condition, modify as per your generated code path
+		}
+		excludes = ['**/generated/.*']
 	}
 }
+
 
 pmd {
 	incrementalAnalysis = true
 	ignoreFailures = true
-	sourceSets = [sourceSets.main]
 	// Exclude specific rules or files/directories
 	pmdMain {
+		source = project.sourceSets.main.allJava.filter { file ->
+			// Exclude directories or files associated with generated code
+			!file.path.contains('generated') // Example condition, modify as per your generated code path
+					&&!file.path.contains('commons')
+					&&!file.path.contains('api')
+		}
 		excludes = ['**/generated/.*']
 	}
+
+	pmdTest {
+		source = project.sourceSets.test.allJava.filter { file ->
+			// Exclude directories or files associated with generated code
+			!file.path.contains('generated') // Example condition, modify as per your generated code path
+					&&!file.path.contains('commons')
+					&&!file.path.contains('api')
+		}
+		excludes = ['**/generated/.*']
+	}
+
 }
 
 apply plugin: 'info.solidsoft.pitest'
