--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -110,10 +110,9 @@ checkstyle {
 
 	checkstyleMain {
 		source = project.sourceSets.main.allJava.filter { file ->
-			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
-			&&!file.path.contains('commons')
-			&&!file.path.contains('api')
+			{
+				return !file.path.contains('generated') && !file.path.contains('commons') && !file.path.contains('api')
+			}
 		}
 		excludes = ['**/generated/.*']
 	}
@@ -136,8 +135,8 @@ pmd {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-			&&!file.path.contains('commons')
-			&&!file.path.contains('api')
+					&&!file.path.contains('commons')
+					&&!file.path.contains('api')
 		}
 		excludes = ['**/generated/.*']
 	}
