--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -109,11 +109,9 @@ checkstyle {
 	showViolations = true // Set to true to display Checkstyle violations in the console
 
 	checkstyleMain {
-		source = project.sourceSets.main.allJava.filter { File file ->
+		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') &&
-					!file.path.contains('commons') &&
-					!file.path.contains('api')
+			!file.path.contains('generated') // Example condition, modify as per your generated code path
 		}
 		excludes = ['**/generated/.*']
 	}
