--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -134,8 +134,8 @@ pmd {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-					&&!file.path.contains('commons')
-					&&!file.path.contains('api')
+//					&&!file.path.contains('commons')
+//					&&!file.path.contains('api')
 		}
 		excludes = ['**/generated/.*']
 	}
@@ -144,8 +144,6 @@ pmd {
 		source = project.sourceSets.test.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-					&&!file.path.contains('commons')
-					&&!file.path.contains('api')
 		}
 		excludes = ['**/generated/.*']
 	}
