--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -110,10 +110,10 @@ checkstyle {
 
 	checkstyleMain {
 		source = project.sourceSets.main.allJava.filter { file ->
-			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
+			// Exclude directories or files associated with generated code or containing the word 'api'
+			!file.path.contains('generated') && !file.path.contains('api')
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*', '**/*api*.*']
 	}
 
 	checkstyleTest {
@@ -134,7 +134,7 @@ pmd {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-//					&&!file.path.contains('commons')
+					&&!file.path.contains('commons')
 //					&&!file.path.contains('api')
 		}
 		excludes = ['**/generated/.*']
@@ -144,6 +144,7 @@ pmd {
 		source = project.sourceSets.test.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
+
 		}
 		excludes = ['**/generated/.*']
 	}
