--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -134,7 +134,7 @@ pmd {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-					&&!file.path.contains('commons')
+//					&&!file.path.contains('commons')
 //					&&!file.path.contains('api')
 		}
 		excludes = ['**/generated/.*']
