--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -111,9 +111,9 @@ checkstyle {
 	checkstyleMain {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code or containing the word 'api'
-			!file.path.contains('generated') && !file.path.contains('api')
+			!file.path.contains('generated') && !file.path.contains('commons') && !file.path.contains('api')
 		}
-		excludes = ['**/generated/.*', '**/*api*.*']
+		excludes = ['**/generated/.*','**/commons/.*','**/api/.*']
 	}
 
 	checkstyleTest {
@@ -134,10 +134,10 @@ pmd {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
 			!file.path.contains('generated') // Example condition, modify as per your generated code path
-//					&&!file.path.contains('commons')
-//					&&!file.path.contains('api')
+					&&!file.path.contains('commons')
+					&&!file.path.contains('api')
 		}
-		excludes = ['**/generated/.*']
+		excludes = ['**/generated/.*','**/commons/.*','**/api/.*']
 	}
 
 	pmdTest {
