put filter parts on 1 line

--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -133,9 +133,7 @@ pmd {
 	pmdMain {
 		source = project.sourceSets.main.allJava.filter { file ->
 			// Exclude directories or files associated with generated code
-			!file.path.contains('generated') // Example condition, modify as per your generated code path
-					&&!file.path.contains('commons')
-					&&!file.path.contains('api')
+			!file.path.contains('generated') && !file.path.contains('commons') && !file.path.contains('api')
 		}
 		excludes = ['**/generated/.*','**/commons/.*','**/api/.*']
 	}
