try to see which test fail

--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -27,7 +27,7 @@ build-order-microservice:
     - gradle_build
   stage: build
   script:
-    gradle order-microservice:assemble order-microservice:testClasses
+    gradle order-microservice:assemble order-microservice:testClasses --stacktrace
 
 checkStyle-order-microservice:
   extends:
