make pipeline fail due to violations

--- a/order-microservice/build.gradle
+++ b/order-microservice/build.gradle
@@ -128,6 +128,17 @@ checkstyle {
 	}
 }
 
+tasks.withType(Checkstyle).each { checkstyleTask ->
+	checkstyleTask.doLast {
+		reports.all { report ->
+			def outputFile = report.destination
+			if (outputFile.exists() && outputFile.text.contains("<error ")) {
+				throw new GradleException("There were checkstyle warnings! For more info check $outputFile")
+			}
+		}
+	}
+}
+
 
 pmd {
 	incrementalAnalysis = true
