--- a/order-microservice/.gitlab-ci.yml
+++ b/order-microservice/.gitlab-ci.yml
@@ -38,7 +38,8 @@ checkStyle-order-microservice:
     - gradle_build
   stage: staticAnalysis
   script:
-    gradle order-microservice:checkstyleMain order-microservice:checkStyleTest
+    - gradle order-microservice:checkstyleMain order-microservice:checkStyleTest
+    - gradle order-microservice:checkstyleTest order-microservice:checkStyleTest
   allow_failure: false
 
 
