YAML file ammended to now have /order/all/{userID} to prevent a conflict (MR has been made to do the same in documents repo).
Integration tests are currently commented out because they do not work -> Need agreement on mocking userServices in these tests to ensure we can get an admin to make the requests.

Tests on put and delete orders are also commented out, as their implementation hasn't bene updated yet (will be done in another merge request).

--- a/order-microservice/src/main/resources/order-api.yaml
+++ b/order-microservice/src/main/resources/order-api.yaml
@@ -277,7 +277,7 @@ paths:
                 $ref: '#/components/schemas/Order'
         '400':
           description: Bad Request. The provided order is malformed
-  /order/{userID}:
+  /order/all/{userID}:
     get:
       tags:
         - Order
